syntax = "proto3";

import "google/protobuf/wrappers.proto";

package graph_description;

// Used to identify the system for a given node
// for example, 'a process executed on cobrien-mbp'
message Host {
    oneof host_id {
        // the hostname of the host
        string hostname = 1;
        // the ip address of the host
        bytes ip = 2;

        // The asset ID itself
        // We expect this to be the variant once we have attributed the node
        string asset_id = 3;
    }
}

message NodeDescription {
    oneof which_node {
        ProcessDescription process_node = 1;
        FileDescription file_node = 2;
        IpAddressDescription ip_address_node = 3;
        ProcessNetworkConnection outbound_connection_node = 4;
        ProcessInboundConnection inbound_connection_node = 5;
    }
}

message OutboundConnection {
    string nodeKey = 1;
    google.protobuf.StringValue asset_id = 2;
    google.protobuf.StringValue hostname = 3;
    google.protobuf.BytesValue host_ip = 4;
    // 1 = Created, 2 = Terminated, 3 = Existing
    uint32 state = 5;
    uint64 timestamp = 6;
    uint32 port = 7;
}

message InboundConnection {
    string nodeKey = 1;
    google.protobuf.StringValue asset_id = 2;
    google.protobuf.StringValue hostname = 3;
    google.protobuf.BytesValue host_ip = 4;
    // 1 = Created, 2 = Terminated, 3 = Existing
    uint32 state = 5;
    uint64 timestamp = 6;
    uint32 port = 7;
}

message ProcessDescription {
    string nodeKey = 1;
    google.protobuf.StringValue asset_id = 2;
    google.protobuf.StringValue hostname = 3;
    google.protobuf.BytesValue host_ip = 4;
    uint32 state = 5;
    uint64 pid = 6;
    // When state == 1, create_time
    // When state == 2, end_time
    // When state == 3, seen_time
    uint64 timestamp = 7;
    bytes image_name = 8;
    bytes image_path = 9;
}

message FileDescription {
    string nodeKey = 1;
    google.protobuf.StringValue asset_id = 2;
    google.protobuf.StringValue hostname = 3;
    google.protobuf.BytesValue host_ip = 4;
    // 1 = Created, 2 = Deleted, 3 = Referenced
    uint32 state = 5;
    uint64 timestamp = 6;
    bytes path = 7;
}

message IpAddressDescription {
    string nodeKey = 1;
    uint64 timestamp = 2;
    bytes ip_address = 3;
}

message EdgeDescription {
    string fromNeighborKey = 1;
    string toNeighborKey = 2;
    string edgeName = 3;
}

message EdgeList {
    repeated EdgeDescription edges = 1;
}

message GraphDescription {
    map <string, NodeDescription> nodes = 1;
    map <string, EdgeList> edges = 2;
    uint64 timestamp = 3;
}

message GeneratedSubgraphs {
    repeated GraphDescription subgraphs = 1;
}




